--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,6 +32,7 @@
     ],
     "start_url": ".",
     "display": "standalone",
+    "orientation":"portrait",
     "theme_color": "#000000",
     "background_color": "#ffffff"
 }
