--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react-device-detect": "^1.17.0",
         "react-dom": "^16.13.1",
         "react-inlinesvg": "^2.2.2",
+        "react-player": "^2.9.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-spring": "^9.0.0-rc.3",
